--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
+    "@types/wicg-file-system-access": "^2020.9.5",
     "three": "^0.147.0",
+    "vite-plugin-mkcert": "^1.10.1",
     "vue": "^3.2.41",
     "vuedraggable": "^4.1.0"
   },
